--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -6,5 +6,5 @@ Vagrant.configure(2) do |config|
     lv.cpus = 4
   end
 
-  config.vm.provision 'shell', inline: 'esxcli system version get'
+  config.vm.provision 'shell', inline: 'esxcli system version get', privileged: false
 end
