--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -6,5 +6,8 @@ Vagrant.configure(2) do |config|
     lv.cpus = 4
   end
 
+  # NB you must use `privileged: false` because esxi does not
+  #    have `sudo` and, by default, you are already executing
+  #    commands as root.
   config.vm.provision 'shell', inline: 'esxcli system version get', privileged: false
 end
