--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -1,5 +1,6 @@
 Vagrant.configure(2) do |config|
-  config.ssh.insert_key = false
+  # see https://github.com/hashicorp/vagrant/tree/master/plugins/guests/esxi
+  config.vm.guest = :esxi
   config.ssh.username = 'root'
   config.ssh.password = 'HeyH0Password'
   config.ssh.shell = '/bin/sh'
