--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -7,8 +7,12 @@ Vagrant.configure(2) do |config|
     lv.cpus = 4
   end
 
-  # NB you must use `privileged: false` because esxi does not
-  #    have `sudo` and, by default, you are already executing
-  #    commands as root.
-  config.vm.provision 'shell', inline: 'esxcli system version get', privileged: false
+  # NB you must use `privileged: false` in the provisioning septs because esxi
+  #    does not have the `sudo` command, and, by default, you are already
+  #    executing commands as root.
+
+  # do not Join the VMware Customer Experience Improvement Program.
+  config.vm.provision :shell, privileged: false, inline: 'esxcli system settings advanced set -o /UserVars/HostClientCEIPOptIn -i 2'
+  # show the ESXi version.
+  config.vm.provision :shell, privileged: false, inline: 'esxcli system version get'
 end
