set the esxi management certificate

--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -1,20 +1,30 @@
 Vagrant.configure(2) do |config|
   config.vm.box = 'esxi-6.7-amd64'
-  config.vm.hostname = 'example.test'
+  config.vm.hostname = 'esxi.test'
 
   config.vm.provider 'libvirt' do |lv, config|
     lv.memory = 4096
     lv.cpus = 4
+
+  # create the management certificate that will be used to access the esxi
+  # management web interface (hostd).
+  config.trigger.before :up do |trigger|
+    trigger.run = {
+      inline: "bash provision-certificate.sh #{config.vm.hostname}"
+    }
   end
 
-  # NB you must use `privileged: false` in the provisioning septs because esxi
+  # NB you must use `privileged: false` in the provisioning steps because esxi
   #    does not have the `sudo` command, and, by default, you are already
   #    executing commands as root.
 
   # do not Join the VMware Customer Experience Improvement Program.
   config.vm.provision :shell, privileged: false, inline: 'esxcli system settings advanced set -o /UserVars/HostClientCEIPOptIn -i 2'
-  # show the ESXi version.
-  config.vm.provision :shell, privileged: false, inline: 'esxcli system version get'
-  # show the machine IP address.
-  config.vm.provision :shell, privileged: false, inline: 'esxcli network ip interface ipv4 get'
+
+  # configure the management certificate.
+  config.vm.provision :file, source: "shared/tls/example-esxi-ca/#{config.vm.hostname}", destination: '/tmp/tls'
+  config.vm.provision :shell, privileged: false, path: 'provision-management-certificate.sh'
+
+  # show the installation summary.
+  config.vm.provision :shell, privileged: false, path: 'summary.sh'
 end
