--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -9,7 +9,7 @@ Vagrant.configure(2) do |config|
     lv.nested = true
     lv.keymap = 'pt'
     lv.disk_bus = 'ide'
-    lv.nic_model_type = 'e1000'
+    lv.nic_model_type = 'vmxnet3'
     lv.video_type = 'vga'
     config.vm.synced_folder '.', '/vagrant', disabled: true
   end
