--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -2,7 +2,7 @@ Vagrant.configure(2) do |config|
   # see https://github.com/hashicorp/vagrant/tree/master/plugins/guests/esxi
   config.vm.guest = :esxi
   config.ssh.username = 'root'
-  config.ssh.password = 'HeyH0Password'
+  config.ssh.password = 'HeyH0Password!'
   config.ssh.shell = '/bin/sh'
   config.vm.provider 'libvirt' do |lv, config|
     lv.cpu_mode = 'host-passthrough'
