--- a/ks.cfg
+++ b/ks.cfg
@@ -1,9 +1,9 @@
 vmaccepteula
-rootpw HeyH0Password
+rootpw HeyH0Password!
 install --firstdisk --overwritevmfs
 #serialnum --esx=XXXX-XXXX-XXXX-XXXX-XXXX
-#keyboard 'US Default'
-keyboard 'Portuguese'
+keyboard 'US Default'
+#keyboard 'Portuguese'
 network --device=vmnic0 --bootproto=dhcp
 reboot
 
