--- a/Vagrantfile.template
+++ b/Vagrantfile.template
@@ -12,5 +12,6 @@ Vagrant.configure(2) do |config|
     lv.disk_bus = 'ide'
     lv.nic_model_type = 'vmxnet3'
     lv.video_type = 'vga'
+    lv.memory = 4000
   end
 end
