--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -75,8 +75,8 @@ Vagrant.configure(2) do |config|
   #    does not have the `sudo` command, and, by default, you are already
   #    executing commands as root.
 
-  # do not Join the VMware Customer Experience Improvement Program.
-  config.vm.provision :shell, privileged: false, inline: 'esxcli system settings advanced set -o /UserVars/HostClientCEIPOptIn -i 2'
+  # configure settings.
+  config.vm.provision :shell, privileged: false, path: 'provision-settings.sh'
 
   # configure the management certificate.
   config.vm.provision :file, source: MANAGEMENT_CERTIFICATE_PATH, destination: '/tmp/tls'
