--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -12,7 +12,7 @@ require 'open3'
 # management web interface (hostd).
 def ensure_management_certificate
   return if File.exists? MANAGEMENT_CERTIFICATE_PATH
-  system("bash provision-certificate.sh #{ESXI_DOMAIN}")
+  system("bash provision-certificate.sh #{ESXI_DOMAIN}", exception: true)
 end
 
 ensure_management_certificate
